force-app/src/objects/PagesApi__Media_Asset__c.object
<CustomObject>
    <description>Upload documents, photographs, animations, videos, music, stylesheets, and javascript files for use in any Fonteva Community.</description>
    <fields>
        <fullName>OrderApi__Display_Order__c</fullName>
        <description>Controls the order in which the images display in the Store.</description>
        <inlineHelpText>Controls the order in which the images display in the Store.</inlineHelpText>
        <label>RESERVED</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OrderApi__Is_Default__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, this is the item&apos;s default image.</description>
        <inlineHelpText>When checked, this is the item&apos;s default image.</inlineHelpText>
        <label>RESERVED</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Image applicable to selected item.</description>
        <inlineHelpText>Image applicable to selected item.</inlineHelpText>
        <label>RESERVED</label>
        <referenceTo>OrderApi__Item__c</referenceTo>
        <relationshipLabel>Media Assets</relationshipLabel>
        <relationshipName>Media_Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PagesApi__Download_Link__c</fullName>
        <description>Download the asset (opens new tab based on browser settings and behavior).</description>
        <formula>HYPERLINK( PagesApi__Path__c , &quot;Click to Download&quot;, &quot;_tab&quot; )</formula>
        <inlineHelpText>Download the asset (opens new tab based on browser settings and behavior).</inlineHelpText>
        <label>Download Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PagesApi__Extension__c</fullName>
        <description>** System Calculated Required ** The extension of the file.</description>
        <inlineHelpText>** System Calculated Required ** The extension of the file.</inlineHelpText>
        <label>Extension</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PagesApi__Filename__c</fullName>
        <description>** Required ** The name of the file.</description>
        <inlineHelpText>** Required ** The name of the file.</inlineHelpText>
        <label>Filename</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PagesApi__MIME_Type__c</fullName>
        <description>** System Calculated ** MIME types form a standard way of classifying file types on the Internet. The MIME Type of the related asset is required.</description>
        <inlineHelpText>** System Calculated ** MIME types form a standard way of classifying file types on the Internet. The MIME Type of the related asset is required.</inlineHelpText>
        <label>MIME Type</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PagesApi__Media_Asset_Collection__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the Media Asset Collection Object, acts as a grouping parent</description>
        <inlineHelpText>Group the similar Media Assets into one by selecting the right Collection</inlineHelpText>
        <label>Media Asset Collection</label>
        <referenceTo>PagesApi__Media_Asset_Collection__c</referenceTo>
        <relationshipLabel>Media Assets</relationshipLabel>
        <relationshipName>Media_Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PagesApi__Path__c</fullName>
        <description>The location of the media asset.</description>
        <inlineHelpText>The location of the media asset.</inlineHelpText>
        <label>Path</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PagesApi__Short_Description__c</fullName>
        <description>Short description about the image that has been uploaded</description>
        <inlineHelpText>A short description about the image to show up in components like Carousels, etc</inlineHelpText>
        <label>Short Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PagesApi__Title__c</fullName>
        <description>The title for the media asset</description>
        <inlineHelpText>80 character String that can mainly serve as a title when the asset is used in sites, pages, etc</inlineHelpText>
        <label>Title</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Media Asset</label>
    <nameField>
        <label>Asset ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Media</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>